[package]
name = "dp-proc-macros"
description = "Procedural macros"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[dependencies]
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0.26"

[lib]
proc-macro = true