[package]
authors = [
  "Kasar <https://github.com/kasarlabs>",
  "KSS <https://github.com/keep-starknet-strange>",
  "Substrate DevHub <https://github.com/substrate-developer-hub>",
]
description = "Deoxys runtime."
edition.workspace = true
homepage = "https://github.com/kasarlabs/deoxys"
license = "MIT"
name = "deoxys-runtime"
publish = false
repository = "https://github.com/kasarlabs/deoxys"
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = [] }
scale-info = { workspace = true, features = [] }
serde = { workspace = true }

sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-session = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-aura = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-timestamp = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Used for the node RPCs
frame-system-rpc-runtime-api = { workspace = true }

# Used for runtime benchmarking
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }

# Deoxys Local Dependencies
# Deoxys Pallets
pallet-starknet = { workspace = true }
pallet-starknet-runtime-api = { workspace = true }

# Deoxys Primitives
mp-chain-id = { workspace = true }
mp-felt = { workspace = true }
mp-program-hash = { workspace = true }
mp-types = { workspace = true }
# Starknet dependencies
starknet_api = { workspace = true }

[features]
default = ["std"]
disable-transaction-fee = []
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-grandpa/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  # Deoxys pallets
  "pallet-starknet/runtime-benchmarks",
]
std = [
  # Deoxys pallets
  "pallet-starknet/std",
  # Frame dependencies
  "frame-benchmarking?/std",
  "frame-executive/std",
  "frame-support/std",
  "frame-system-benchmarking?/std",
  "frame-system-rpc-runtime-api/std",
  "frame-system/std",
  # Frame pallets dependencies
  "pallet-aura/std",
  "pallet-grandpa/std",
  "pallet-timestamp/std",
  # Substrate primitives dependencies
  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  # 3rd party dependencies
  "parity-scale-codec/std",
  "scale-info/std",
]
try-runtime = [
  "frame-executive/try-runtime",
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-aura/try-runtime",
  "pallet-grandpa/try-runtime",
  "pallet-timestamp/try-runtime",
  # Deoxys pallets
  "pallet-starknet/try-runtime",
]
