[package]
name = "mc-analytics"
description = "Madara client for open telemetry analytics service"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
#Instrumentation
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
mp-utils = { workspace = true }
opentelemetry = { workspace = true, features = ["metrics", "logs"] }
opentelemetry-appender-tracing = { workspace = true, default-features = false }
opentelemetry-otlp = { workspace = true, features = [
  "tonic",
  "metrics",
  "logs",
] }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio", "logs"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true, default-features = false }
tracing-opentelemetry = "0.26.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
