[package]
name = "mc-block-import"
description = "Block import validation pipeline for Madara"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
bitvec.workspace = true
futures.workspace = true
log.workspace = true
rayon.workspace = true
thiserror.workspace = true
tokio.workspace = true

mc-db = { workspace = true, features = ["testing"]}
mp-block = { workspace = true }
mp-chain-config = { workspace = true }
mp-class = { workspace = true }
mp-convert = { workspace = true }
mp-receipt = { workspace = true }
mp-state-update = { workspace = true }
mp-transactions = { workspace = true }
mp-utils = { workspace = true }

bonsai-trie = { workspace = true }
starknet-core = { workspace = true }
starknet-providers = { workspace = true }
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }