[package]
name = "mc-db"
description = "Madara client database service"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[lints.clippy]
# We cannot inherit the lints because we use unsafe in this crate.
print_stdout = "warn"
print_stderr = "warn"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Madara
mc-metrics = { workspace = true }
mp-block = { workspace = true }
mp-chain-config = { workspace = true }
mp-class = { workspace = true }
mp-receipt = { workspace = true }
mp-state-update = { workspace = true }
mp-transactions = { workspace = true }
mp-utils = { workspace = true }

# Starknet
bonsai-trie = { workspace = true }
starknet-core = { workspace = true }
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }

# Other
anyhow.workspace = true
bincode = { workspace = true }
librocksdb-sys = { workspace = true }
log = { workspace = true, default-features = true }
rayon = { workspace = true }
rocksdb.workspace = true
serde = { workspace = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "parking_lot",
  "test-util",
  "signal",
] }

[dev-dependencies]
tempfile = "3.10"
lazy_static = { workspace = true }
mp-transactions = { workspace = true }


[features]
default = []
testing = ["tempfile"]
