[package]
name = "mc-deoxys"
version = "0.1.0"
description = "Deoxys crate for Madara"
authors = ["Antiyro <https://github.com/antiyro>"]
homepage = "https://github.com/KasarLabs/deoxys"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/KasarLabs/deoxys"

[features]
default = ["m"]
m = ["dep:rodio"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
reqwest = "0.11"
serde_json = "1"
starknet-gateway = "0.6"
tokio-tungstenite = "0.20.1"
web3 = "0.19.0"

blockifier = { workspace = true, default-features = false, features = [
  "testing",
] }
env_logger = "0.10.0"
indexmap = { workspace = true }
log = { version = "0.4.14" }
mockito = { workspace = true }
rand = { version = "0.8.5" }
rodio = { version = "0.17", optional = true }
serde = { workspace = true, default-features = true }
sp-core = { workspace = true, features = ["std"] }
starknet-core = { workspace = true }
starknet-ff = { workspace = true, default-features = false, features = [
  "alloc",
  "serde",
] }
starknet_api = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["macros", "test-util", "parking_lot"] }
url = { workspace = true }
# test_utils = { path = "./test_utils", optional = true }
futures = { workspace = true, default-features = true }
hex = "0.4"
mc-commitment-state-diff = { workspace = true }
mp-block = { workspace = true }
mp-commitments = { workspace = true }
mp-felt = { workspace = true }
mp-hashers = { workspace = true }
mp-transactions = { workspace = true, features = ["client"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
sc-consensus-manual-seal.workspace = true
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
# test_utils = { path = "./test_utils" }
