[package]
name = "dc-devnet"
description = "Deoxys client devnet creation"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]

rstest = { workspace = true }
dc-db = { workspace = true, features = ["testing"] }
dc-mempool = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
proptest.workspace = true
proptest-derive.workspace = true
env_logger.workspace = true
blockifier = { workspace = true, features = ["testing"] }
mockall.workspace = true
assert_matches.workspace = true

[dependencies]

# Deoxys
dc-mempool.workspace = true
dc-block-import.workspace = true
dc-db.workspace = true
dc-exec.workspace = true
dp-block.workspace = true
dp-chain-config.workspace = true
dp-class.workspace = true
dp-convert.workspace = true
dp-receipt.workspace = true
dp-state-update.workspace = true
dp-transactions.workspace = true
dp-utils.workspace = true

# Starknet
blockifier.workspace = true
starknet-core.workspace = true
starknet-signers.workspace = true
starknet-types-core.workspace = true
starknet_api.workspace = true

# Other
anyhow.workspace = true
async-trait.workspace = true
hyper.workspace = true
log.workspace = true
rayon.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
