[package]
name = "mc-devnet"
description = "Madara client devnet creation"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]

rstest = { workspace = true }
mc-db = { workspace = true, features = ["testing"] }
mc-mempool = { workspace = true, features = ["testing"] }
mc-metrics = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
proptest.workspace = true
proptest-derive.workspace = true
env_logger.workspace = true
blockifier = { workspace = true, features = ["testing"] }
mockall.workspace = true
assert_matches.workspace = true

[dependencies]

# Madara
mc-block-import.workspace = true
mc-db.workspace = true
mp-block.workspace = true
mp-chain-config.workspace = true
mp-class.workspace = true
mp-convert.workspace = true
mp-receipt.workspace = true
mp-state-update.workspace = true
mp-transactions.workspace = true
mp-utils.workspace = true

# Starknet
blockifier.workspace = true
starknet-core.workspace = true
starknet-signers.workspace = true
starknet-types-core.workspace = true
starknet_api.workspace = true

# Other
anyhow.workspace = true
log.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true
