[package]
description = "This crate is responsible to handle l1 communication"
name = "dc-eth"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Deoxys
dc-db = { workspace = true }
dc-metrics = { workspace = true }
dp-block = { workspace = true }
dp-convert = { workspace = true }
dp-transactions = { workspace = true }
dp-utils = { workspace = true }

# Starknet
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }


# Other
alloy = { workspace = true, features = ["node-bindings"] }
anyhow = "1.0.75"
bitvec = { workspace = true }
blockifier = { workspace = true }
bytes = "1.6.0"
futures = { workspace = true, default-features = true }
log = { workspace = true }
primitive-types = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = "1"
thiserror.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "parking_lot",
  "test-util",
  "signal",
] }
tracing = "0.1.40"
url = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
once_cell = { workspace = true }
tempfile = { workspace = true }
dotenv = { workspace = true }
prometheus = { workspace = true }
tracing-test = "0.2.5"
