[package]
description = "This crate is responsible to handle l1 communication"
name = "dc-eth"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Deoxys
dc-db = { workspace = true }
dc-mempool = { workspace = true }
dc-metrics = { workspace = true }
dc-sync = { workspace = true }
dc-telemetry = { workspace = true }
dp-block = { workspace = true }
dp-chain-config = { workspace = true }
dp-convert = { workspace = true }
dp-transactions = { workspace = true }
dp-utils = { workspace = true }

# Starknet
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }


# Other
alloy = { workspace = true }
anyhow = "1.0.75"
async-trait = "0.1.80"
bitvec = { workspace = true }
blockifier = { workspace = true }
bytes = "1.6.0"
futures = { workspace = true, default-features = true }
lazy_static = { workspace = true }
log = { workspace = true }
primitive-types = { workspace = true }
regex = "1.10.5"
serde = { workspace = true, default-features = true }
serde_json = "1"
thiserror.workspace = true
time = "0.3.36"
tokio = { workspace = true, features = [
  "macros",
  "parking_lot",
  "test-util",
  "signal",
] }
tracing = "0.1.40"
url = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
once_cell = { workspace = true }
tempfile = { workspace = true }
dotenv = { workspace = true }
prometheus = { workspace = true }
httpmock = { workspace = true }
tracing-test = "0.2.5"
