[package]
description = "Deoxys execution"
name = "dc-exec"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Deoxys
dc-block-import = { workspace = true }
dc-db = { workspace = true }
dp-block = { workspace = true }
dp-chain-config = { workspace = true }
dp-class = { workspace = true }
dp-convert = { workspace = true }
dp-state-update = { workspace = true }

# Starknet
blockifier = { workspace = true }
cairo-vm = { workspace = true }
starknet-core = { workspace = true }
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }

# Other
anyhow = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
starknet-signers = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

rstest = { workspace = true }
dc-db = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
