[package]
description = "Madara execution"
name = "mc-exec"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Madara
mc-block-import = { workspace = true }
mc-db = { workspace = true }
mp-block = { workspace = true }
mp-chain-config = { workspace = true }
mp-class = { workspace = true }
mp-convert = { workspace = true }
mp-state-update = { workspace = true }

# Starknet
blockifier = { workspace = true }
cairo-vm = { workspace = true }
starknet-core = { workspace = true }
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }

# Other
anyhow = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
starknet-signers = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

rstest = { workspace = true }
mc-db = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
