[package]
description = "Madara client rpc service"
name = "mc-gateway"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Madara
mc-db.workspace = true
mc-rpc.workspace = true
mp-block.workspace = true
mp-class.workspace = true
mp-gateway.workspace = true
mp-utils.workspace = true

# Starknet
starknet-core.workspace = true
starknet-types-core.workspace = true

# Other
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
http-body-util.workspace = true
http.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper-tls.workspace = true
hyper-util.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = { version = "0.4", features = ["timeout", "retry", "util", "limit"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
rstest.workspace = true
flate2.workspace = true
