[package]
authors.workspace = true
edition.workspace = true
name = "mc-genesis-data-provider"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
jsonrpsee = { workspace = true, default-features = true }
log = { workspace = true, default-features = true }
mp-genesis-config = { workspace = true, default-features = true }
pallet-starknet = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true }
