[package]
description = "This crate is responsible to handle l1-l2 messaging"
name = "dc-messaging"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Deoxys
dc-db = { workspace = true }
dc-eth = { workspace = true }
dc-metrics = { workspace = true }
dp-convert = { workspace = true }
dp-transactions = { workspace = true }
dp-utils = { workspace = true }

# Starknet
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }


# Other
alloy = { workspace = true, features = ["full"] }
anyhow = "1.0.75"
blockifier = { workspace = true }
bitvec = { workspace = true }
futures = { workspace = true, default-features = true }
log = { workspace = true }
primitive-types = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = "1"
thiserror.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "parking_lot",
  "test-util",
  "signal",
] }
url = { workspace = true }

