[package]
name = "mc-mapping-sync"
version.workspace = true
edition.workspace = true
description = "Mapping sync logic for Madara"
authors = [
  "Timothée Delabrouille <https://github.com/tdelabro>",
  "Substrate DevHub <https://github.com/substrate-developer-hub>",
]
homepage = "https://github.com/keep-starknet-strange/madara"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"

[dependencies]
anyhow = { workspace = true, default-features = true }
deoxys-runtime = { workspace = true }
futures = { workspace = true, default-features = true }
futures-timer = { workspace = true }
log = { workspace = true, default-features = true }
mc-db = { workspace = true }
mc-rpc = { workspace = true }
mc-storage = { workspace = true }
mc-sync = { workspace = true }
mp-digest-log = { workspace = true }
mp-hashers = { workspace = true }
mp-transactions = { workspace = true }
mp-types = { workspace = true }
pallet-starknet-runtime-api = { workspace = true }
sc-client-api = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }
